syntax = "proto3";
package com.qxdzbc.p6.proto;

import "com/qxdzbc/p6/proto/CommonProtos.proto";
import "com/qxdzbc/p6/proto/DocProtos.proto";


message SetActiveWorksheetRequestProto{
  WorkbookKeyProto workbookKey = 1;
  string worksheetName = 2;
}

message SetActiveWorksheetResponseProto{
  WorkbookKeyProto workbookKey = 1;
  string worksheetName = 2;
  bool isError = 3;
  ErrorReportProto errorReport = 4;
}

message LoadWorkbookRequestProto{
  string path = 1;
}

message LoadWorkbookResponseProto{
  optional WorkbookKeyProto wbKey = 1;
  optional ErrorReportProto errorReport = 2;
}

message SaveWorkbookRequestProto{
  WorkbookKeyProto wbKey = 1;
  string path = 2;
}

message SaveWorkbookResponseProto{
  ErrorReportProto errorReport = 1;
  WorkbookKeyProto wbKey = 2;
  string path = 3;
}


message GetWorkbookRequestProto{
  optional WorkbookKeyProto wbKey = 1;
  optional string wbName = 2 ;
  optional int32 wbIndex = 3;
}

message WorkbookKeyWithErrorResponseProto{
  optional WorkbookKeyProto wbKey = 1;
  optional ErrorReportProto errorReport = 2;
}

message CreateNewWorkbookRequestProto{
  optional string windowId = 1;
  optional string workbookName = 2;
}

message CreateNewWorkbookResponseProto{
  optional ErrorReportProto errorReport = 1;
  optional WorkbookKeyProto wbKey = 2;
  optional string windowId = 3;
}

message GetAllWorkbookResponseProto{
  repeated WorkbookKeyProto wbKeys = 1;
}
